@@ -1,0 +1,16 @@
+---
+compliance_markup::validate_profiles:
+  - "%{facts.target_compliance_profile}"
+
+# Needed for catalog inspection to ensure valid data
+compliance_markup::report_on_client: true
+compliance_markup::report_on_server: false
+compliance_markup::report_types:
+  - 'non_compliant'
+  - 'unknown_parameters'
+  - 'unknown_resources'
+
+# Ideally, this would be the same as the validation array but you may want to
+# do something different based on your test requirements
+compliance_markup::enforcement:
+  - "%{facts.target_compliance_profile}"
